# NimQt_NEW

CPP/: CMakeLists.txt  gui.cpp  main.c
CPP/includes/: MAbstractButton.h  MApplication.h  MDialog.h  MFrame.h  MLibrary.h  MPushButton.h  MVBoxLayout.h  MWidget.h
NIM/: MVarTable.nim  db.nim  gui.nim  gui.org  mfilter.nim  mlibrary.nim  mtable.nim  mvariant.nim  mvariant_bkp.nim  perser.nim  perser_t.nim  perser_t2.nim  playGround.nim  snippet.org  tblUser.nim  test.ui  ui_user_form.ui
NIM/Db/: MDb.nim  dbTable.nim  dbTable.org  engine.nim  user.nim  user.org
NIM/script/: mn.nim  mn.org  testJson.nim
